syntax = "proto3";

package category;

// Définition d'une Catégorie d'articles
message Category {
  string id = 1;
  string nom = 2;
  string description = 3;
  string image_url = 4;
  string date_creation = 5;
  string date_modification = 6;
}

// Requête pour obtenir une catégorie par ID
message GetCategoryRequest {
  string id = 1;
}

// Réponse pour une catégorie
message GetCategoryResponse {
  Category category = 1;
}

// Requête pour obtenir toutes les catégories
message ListCategoriesRequest {
  int32 page = 1;
  int32 limit = 2;
}

// Réponse pour la liste des catégories
message ListCategoriesResponse {
  repeated Category categories = 1;
  int32 total = 2;
}

// Requête pour créer ou mettre à jour une catégorie
message CreateUpdateCategoryRequest {
  Category category = 1;
}

// Réponse après création ou mise à jour
message CreateUpdateCategoryResponse {
  Category category = 1;
  bool success = 2;
}

// Requête pour supprimer une catégorie
message DeleteCategoryRequest {
  string id = 1;
}

// Réponse après suppression
message DeleteCategoryResponse {
  bool success = 1;
}

// Service gRPC pour les catégories
service CategoryService {
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse);
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse);
  rpc CreateCategory(CreateUpdateCategoryRequest) returns (CreateUpdateCategoryResponse);
  rpc UpdateCategory(CreateUpdateCategoryRequest) returns (CreateUpdateCategoryResponse);
  rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryResponse);
}